--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-   
+    <div class="quiz-container">
+        <div class="quiz-header">
+            <h2 id="question">Question Test</h2>
+            <ul>
+                <li><input type="radio" id="a" name="answer">
+                    <label id="option1"  for="a">Question</label>
+                </li>
+
+                <li><input type="radio" id="b" name="answer">
+                    <label id="option2" for="b">Question</label>
+                </li>
+
+                <li><input type="radio" id="c" name="answer">
+                    <label id="option3" for="c">Question</label>
+                </li>
+
+                <li><input type="radio" id="d" name="answer">
+                    <label id="option4" for="d">Question</label>
+                </li>
+            </ul>
+        </div>
+        <button id="submit">Submit</button>
+    </div>
 </body>
+    <script src="./script.js"></script>
+
 </html>
