quiz app completed

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 </head>
 
 <body>
-    <div class="quiz-container">
+    <div class="quiz-container" id="quiz">
         <div class="quiz-header">
             <h2 id="question">Question Test</h2>
+            <!-- ul>li*4>input+label -->
             <ul>
-                <li><input type="radio" id="a" name="answer">
+                <li><input type="radio" id="a" name="answer" class="answer">
                     <label id="option1"  for="a">Question</label>
                 </li>
 
-                <li><input type="radio" id="b" name="answer">
+                <li><input type="radio" id="b" name="answer" class="answer">
                     <label id="option2" for="b">Question</label>
                 </li>
 
-                <li><input type="radio" id="c" name="answer">
+                <li><input type="radio" id="c" name="answer" class="answer">
                     <label id="option3" for="c">Question</label>
                 </li>
 
-                <li><input type="radio" id="d" name="answer">
+                <li><input type="radio" id="d" name="answer" class="answer">
                     <label id="option4" for="d">Question</label>
                 </li>
             </ul>
